--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^3.0.1",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
